Removed boot, finished I18n and fixed maven dependencies