@@ -6,7 +6,7 @@
 	<groupId>fr.jdbc</groupId>
 	<artifactId>computerdatabase</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>computerdatabase</name>
 	<url>http://maven.apache.org</url>
@@ -20,11 +20,11 @@
 		<slf4j-api>1.8.0-beta4</slf4j-api>
 		<selenium-java>3.141.59</selenium-java>
 		<jstl>1.2</jstl>
+		<servlet-api>2.5</servlet-api>
 		<taglibs-standard-impl>1.2.5</taglibs-standard-impl>
 		<mockito-junit-jupiter>2.23.0</mockito-junit-jupiter>
 		<HikariCP>3.3.1</HikariCP>
 		<spring.version>5.1.5.RELEASE</spring.version>
-		<spring-boot>2.1.3.RELEASE</spring-boot>
 	</properties>
 
 	<dependencies>
@@ -59,6 +59,12 @@
 		</dependency>
 
 		<dependency>
+		    <groupId>javax.servlet</groupId>
+		    <artifactId>javax.servlet-api</artifactId>
+		    <version>4.0.1</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.apache.taglibs</groupId>
 			<artifactId>taglibs-standard-impl</artifactId>
 			<version>${taglibs-standard-impl}</version>
@@ -69,6 +75,14 @@
 			<artifactId>HikariCP</artifactId>
 			<version>${HikariCP}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.12</version>
+			<scope>test</scope>
+		</dependency>
+
 
 		<dependency>
 			<groupId>org.mockito</groupId>
@@ -88,11 +102,22 @@
 			<version>${spring.version}</version>
 		</dependency>
 
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-			<version>${spring-boot}</version>
-		</dependency>
 
 	</dependencies>
+	<build>
+		<pluginManagement>
+			<plugins>
+				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
+					<artifactId>maven-surefire-plugin</artifactId>
+					<configuration>
+						<forkCount>3</forkCount>
+						<reuseForks>true</reuseForks>
+						<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+					</configuration>
+				</plugin>
+			</plugins>
+		</pluginManagement>
+
+	</build>
 </project>
